--- a/api/package.json
+++ b/api/package.json
@@ -14,8 +14,10 @@
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
+    "cloudinary": "^1.9.1",
     "cors": "^2.8.3",
     "express": "^4.14.1",
+    "express-fileupload": "^0.3.0",
     "express-session": "^1.15.1",
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.8.1",
